--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,9 @@
       <div class="emoji mb-6">💣🤯💥</div>
       <button class="button">Boom?</button>
     </div>
+    <div class="navbar-menu">
+    </div>
+    <div class="navbar-burger">
+    </div>
   </body>
 </html>
